--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 DATABASE_URL="mysql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="<Your Cloud Name>"
