--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
 DATABASE_URL="mysql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="<Your Cloud Name>"
+
+STRIPE_API_KEY=sk_test_••••••••••••••••••••••••••••••••••
+FRONTEND_STORE_URL=http://localhost:3001
+STRIPE_WEBHOOK_SECRET: whsec_••••••••••••••••••••••••••••••••••
